--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.66.3",
     "react-native-elements": "3.4.2",
     "react-native-loading-spinner-overlay": "2.0.0",
+    "react-native-options-menu": "2.0.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.9.0",
     "react-native-vector-icons": "9.0.0",
