Add tournament & pick cover image

--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "axios": "0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-date-picker": "4.2.0",
+    "react-native-document-picker": "8.0.0",
     "react-native-elements": "3.4.2",
+    "react-native-fs": "2.19.0",
     "react-native-loading-spinner-overlay": "2.0.0",
     "react-native-options-menu": "2.0.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.9.0",
+    "react-native-snackbar": "2.4.0",
     "react-native-vector-icons": "9.0.0",
     "react-redux": "7.2.6",
     "redux": "4.1.2"
