--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.9.0",
     "react-native-snackbar": "2.4.0",
+    "react-native-sqlite-storage": "6.0.1",
     "react-native-vector-icons": "9.0.0",
     "react-redux": "7.2.6",
     "redux": "4.1.2"
@@ -34,6 +35,8 @@
     "@react-native-community/eslint-config": "2.0.0",
     "@types/jest": "26.0.23",
     "@types/react-native": "0.66.4",
+    "@types/react-native-loading-spinner-overlay": "0.5.3",
+    "@types/react-native-sqlite-storage": "5.0.2",
     "@types/react-test-renderer": "17.0.1",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
